updating docker file to reference repo and branch

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -129,8 +129,8 @@ ENV STATUSPORT=${PORT_GROUP}455 \
     DBUSER=swgemu \
     ADMIN_USER=admin \
     REPOS='Core3' \
-    REPO_PUBLIC_URL=https://github.com/swgemu \
-    REPO_PUBLIC_BRANCH='unstable'
+    REPO_PUBLIC_URL=https://github.com/implodingswg \
+    REPO_PUBLIC_BRANCH='solo'
 
 ENV PATH=${HOME_DIR}/bin:/usr/local/bin:${PATH}
 
